[gd_scene load_steps=46 format=2]

[ext_resource path="res://Player/Run/adventurer-run2-03.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Idle/adventurer-idle-01.png" type="Texture" id=3]
[ext_resource path="res://Player/Fall/adventurer-fall-00.png" type="Texture" id=4]
[ext_resource path="res://Player/Run/adventurer-run2-01.png" type="Texture" id=5]
[ext_resource path="res://Player/Run/adventurer-run2-04.png" type="Texture" id=6]
[ext_resource path="res://Player/Jump/adventurer-jump-02.png" type="Texture" id=7]
[ext_resource path="res://Player/Idle/adventurer-idle-02.png" type="Texture" id=8]
[ext_resource path="res://Player/Jump/adventurer-jump-01.png" type="Texture" id=9]
[ext_resource path="res://Player/Jump/adventurer-jump-00.png" type="Texture" id=10]
[ext_resource path="res://Player/Idle/adventurer-idle-00.png" type="Texture" id=11]
[ext_resource path="res://Player/Jump/adventurer-jump-03.png" type="Texture" id=12]
[ext_resource path="res://Player/Idle/adventurer-idle-03.png" type="Texture" id=13]
[ext_resource path="res://Player/Fall/adventurer-fall-01.png" type="Texture" id=14]
[ext_resource path="res://Player/Run/adventurer-run2-02.png" type="Texture" id=15]
[ext_resource path="res://Player/Run/adventurer-run2-05.png" type="Texture" id=16]
[ext_resource path="res://Player/Run/adventurer-run2-00.png" type="Texture" id=17]
[ext_resource path="res://Player/WallSlide/adventurer-wall-slide-01.png" type="Texture" id=18]
[ext_resource path="res://Player/WallSlide/adventurer-wall-slide-00.png" type="Texture" id=19]
[ext_resource path="res://SFX/SFX_-_bow_release_01.ogg" type="AudioStream" id=20]
[ext_resource path="res://UI/CanvasLayer.tscn" type="PackedScene" id=21]
[ext_resource path="res://Objects/Light.tscn" type="PackedScene" id=22]
[ext_resource path="res://Player/atk/adventurer-bow-02.png" type="Texture" id=23]
[ext_resource path="res://Player/atk/adventurer-bow-03.png" type="Texture" id=24]
[ext_resource path="res://Player/atk/adventurer-bow-01.png" type="Texture" id=25]
[ext_resource path="res://Player/atk/adventurer-bow-05.png" type="Texture" id=26]
[ext_resource path="res://Player/atk/adventurer-bow-08.png" type="Texture" id=27]
[ext_resource path="res://Player/atk/adventurer-bow-04.png" type="Texture" id=28]
[ext_resource path="res://Player/atk/adventurer-bow-06.png" type="Texture" id=29]
[ext_resource path="res://Player/HIt.wav" type="AudioStream" id=30]
[ext_resource path="res://Player/atk/adventurer-bow-07.png" type="Texture" id=31]
[ext_resource path="res://Player/atk/adventurer-bow-jump-00.png" type="Texture" id=32]
[ext_resource path="res://Player/atk/adventurer-bow-jump-02.png" type="Texture" id=33]
[ext_resource path="res://Player/atk/adventurer-bow-jump-03.png" type="Texture" id=34]
[ext_resource path="res://Player/atk/adventurer-bow-jump-04.png" type="Texture" id=35]
[ext_resource path="res://Hookshot/HookShot.tscn" type="PackedScene" id=36]
[ext_resource path="res://Player/Cast/adventurer-cast-00.png" type="Texture" id=37]
[ext_resource path="res://Player/Cast/adventurer-cast-02.png" type="Texture" id=38]
[ext_resource path="res://Player/Cast/adventurer-cast-01.png" type="Texture" id=39]
[ext_resource path="res://Player/atk/adventurer-bow-jump-05.png" type="Texture" id=40]
[ext_resource path="res://Player/atk/adventurer-bow-jump-01.png" type="Texture" id=41]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.22855, 1.53553 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.38278, 13.7634 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 12 ) ],
"loop": false,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 14 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 5 ), ExtResource( 15 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 16 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 27 ) ],
"loop": false,
"name": "Attack",
"speed": 30.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 39 ), ExtResource( 38 ) ],
"loop": false,
"name": "Cast",
"speed": 15.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 41 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 40 ) ],
"loop": false,
"name": "AirAttack",
"speed": 20.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 18 ) ],
"loop": true,
"name": "WallJump",
"speed": 7.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "Hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.972549, 0.745098, 0.745098, 1 ), Color( 0.705882, 0.14902, 0.14902, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.513726 ), Color( 1, 1, 1, 0.768627 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"entities",
]]
collision_mask = 15
script = ExtResource( 2 )

[node name="UI" parent="." instance=ExtResource( 21 )]

[node name="Light" parent="." instance=ExtResource( 22 )]
range_layer_max = 1

[node name="BodyCol" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.353554, 15.6605 )
shape = SubResource( 1 )

[node name="FeetCol" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.353554, 3.53553 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"
playing = true

[node name="WallRaycast" type="Node2D" parent="."]

[node name="Left" type="Node2D" parent="WallRaycast"]

[node name="LeftWallRaycast" type="RayCast2D" parent="WallRaycast/Left"]
visible = false
position = Vector2( -4.77046, -2.94646 )
scale = Vector2( 0.2, 0.2 )
enabled = true
cast_to = Vector2( -30, 0 )
collision_mask = 2
collide_with_areas = true

[node name="LeftWallRaycast2" type="RayCast2D" parent="WallRaycast/Left"]
visible = false
position = Vector2( -4.77046, 5.9005 )
scale = Vector2( 0.2, 0.2 )
enabled = true
cast_to = Vector2( -30, 0 )
collision_mask = 2
collide_with_areas = true

[node name="Right" type="Node2D" parent="WallRaycast"]

[node name="RightWallRaycast" type="RayCast2D" parent="WallRaycast/Right"]
visible = false
position = Vector2( 4.77, -2.946 )
scale = Vector2( 0.2, 0.2 )
enabled = true
cast_to = Vector2( 30, 0 )
collision_mask = 2
collide_with_areas = true

[node name="RightWallRaycast2" type="RayCast2D" parent="WallRaycast/Right"]
visible = false
position = Vector2( 4.77, 5.9005 )
scale = Vector2( 0.2, 0.2 )
enabled = true
cast_to = Vector2( 30, 0 )
collision_mask = 2
collide_with_areas = true

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -5.0
pitch_scale = 1.5
bus = "Jump"
__meta__ = {
"_editor_description_": ""
}

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )
volume_db = -5.0
pitch_scale = 0.99
bus = "Jump"
__meta__ = {
"_editor_description_": ""
}

[node name="HookShot" parent="." instance=ExtResource( 36 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 4 )

[node name="bowSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )
bus = "SFX"

[node name="DrawString" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="GracePeriod" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HookShotCooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="KnockbackTimeout" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="DrawString" to="." method="_on_DrawString_timeout"]
[connection signal="timeout" from="GracePeriod" to="." method="_on_GracePeriod_timeout"]
[connection signal="timeout" from="HookShotCooldown" to="." method="_on_HookShotCooldown_timeout"]
[connection signal="timeout" from="KnockbackTimeout" to="." method="_on_KnockbackTimeout_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
